--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "472dc6f0-0677-45d1-b5cc-9f554a4b1850"
+      "id": "0476d864-df47-416d-b940-2cfacac81339"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "2e8face2-2387-4b4f-9e63-053b68d3464e"
+      "id": "04f71730-080b-49ba-ba9e-2c32919a0685"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "df06e6eb-6eef-44b8-bbdb-e7463871b9ae"
+      "id": "0cc81b93-e6e6-4e7b-ba14-34ea3e0b4ae7"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "1816e1c4-9744-4468-90f9-716bcdaf3710"
+      "id": "aa4df4f0-3929-4c26-bb30-a7576850eae9"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "fe91d616-f144-444c-9bcd-907a2b935125"
+      "id": "c78ed222-a535-4e2e-8bb1-c84d8868979e"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "ca0479fd-7fef-4c39-aac3-6df71077777c"
+      "id": "e7f0658e-f094-4c32-92e4-18d8f7dd81a3"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "4913588a-493b-4867-9817-34b40ac55cf6"
+      "id": "c788e224-3ec5-4152-abcd-9b404a5d51a5"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "7ac69006-998d-4aa6-8ae0-42be155c21f5"
+      "id": "737328f5-9d7e-4edc-8e8c-07957c965def"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "491a5deb-96e0-4d78-87d3-409814de25c5"
+      "id": "153ba45e-4727-4910-8b97-72bde203a79e"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "7f32c9dc-c9b4-45f8-a481-0c77c7381696"
+      "id": "0937cd9e-e164-4698-b9cc-d31db2103ab1"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "4d685180-a58b-4076-b67b-0983bd1d53b6"
+      "id": "f89551a5-7edb-46e8-96a3-8e9642ff2902"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "536fef96-375b-4eec-956c-66bebce02a1b"
+      "id": "055e1d93-6e3c-4c97-a818-7b1cd79ec4fc"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "e4b77bb4-cd01-43f4-bc30-48ec35a645af"
+      "id": "adfff7b2-cfda-441a-ab67-42c6df889f42"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "10b3e58f-7cfb-4e53-9c97-40dc2e5f2740"
+      "id": "7ac762e4-65d3-4594-a4a7-38af99eb39e4"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "f2bb2646-f7a4-4a9b-b8ed-e1cd250717a0"
+      "id": "a6a307c3-66fd-4c59-8b1d-2573af14acbf"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "dba3784b-471d-4832-b1e8-fdb2f265ea89"
+      "id": "4f28aed1-dd66-405e-801c-4b4f192e195d"
     },
     {
       "cell_type": "code",
