--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "332a06d6-077c-42af-a3f5-91b429aea999"
+      "id": "56385c33-b880-421d-9a8d-30f20b614f7f"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "e5076ba6-06eb-48f1-8f2d-f2c4905a7016"
+      "id": "41d22c5e-3a33-4c57-8c31-1a505a2a5a0c"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "16d50e77-a10e-497c-90de-93845591b4e0"
+      "id": "b8231130-a2d7-45f8-acb4-d575fb13ded3"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "0c44da2d-a3e8-44b8-b97f-072e03f7e04f"
+      "id": "929c2e33-739a-470e-99ba-31320a722b5c"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "fdd1c1ff-0637-42b9-af42-7f3014248f3d"
+      "id": "70243efb-cbdb-488a-ad4c-2789ff3bc4a6"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "41299751-a37f-4de3-921b-77f425fe8f8e"
+      "id": "0b583993-9433-4a1b-ae4a-f58368f34ac9"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "e9c240ed-ec4c-45db-b066-65849f02de5a"
+      "id": "64db06e6-8b75-4d9d-983d-e21ab01022c8"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "763b8092-7618-4eb8-b725-921e9447b1c0"
+      "id": "702d99b2-aa9b-4060-ae6d-cd44dc111850"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "559f3ad8-cf78-4bad-95ed-44a2419f6d6f"
+      "id": "ff457926-0fa4-474c-a074-b372aa1f8b71"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "c775e2ee-d5d3-4c54-9288-1f1672249e86"
+      "id": "f940e2a0-c87f-42aa-b249-7286030011f4"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "53059b2a-60ab-4f21-9731-8b51a65bc8b6"
+      "id": "6303dc44-9770-4069-9aaa-5c6f65ca6ffa"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "63448138-0ca6-46ad-aaad-44f30bc5e7e9"
+      "id": "34bb74ac-1098-4380-a61f-6abcb2525d6c"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "d269a1e8-e366-4870-b231-a6c76c459ddf"
+      "id": "3e2ec7c6-feb7-450e-943e-0a0c1500ef5a"
     },
     {
       "cell_type": "code",
@@ -694,7 +694,7 @@
         "“선형변환+비선형변환”이 반복되는 구조이다. “선형변환+비선형변환”을\n",
         "하나의 세트로 보면 아래와 같이 표현할 수 있다.\n",
         "\n",
-        "-   $\\underset{(n,1)}{\\bf X}  \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad  \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
         "\n",
         "이것을 다이어그램으로 표현한다면 아래와 같다.\n",
         "\n",
@@ -729,6 +729,7 @@
         ">     torch.nn.Linear(??,??), ## <-- 학습해야할 가중치가 있는 층\n",
         ">     torch.nn.ReLU(),\n",
         ">     torch.nn.Linear(??,??), ## <-- 학습해야할 가중치가 있는 층\n",
+        "> )\n",
         "> ```\n",
         ">\n",
         "> ``` python\n",
@@ -738,6 +739,7 @@
         ">     torch.nn.ReLU(),\n",
         ">     torch.nn.Linear(??,??), ## <-- 학습해야할 가중치가 있는 층\n",
         ">     torch.nn.Sigmoid(),\n",
+        "> )\n",
         "> ```\n",
         ">\n",
         "> ``` python\n",
@@ -853,7 +855,7 @@
         "\n",
         "아래의 아키텍처를 가지는 네트워크를 파이토치코드로 선언하라.\n",
         "\n",
-        "<figure class=\"margin-caption\">\n",
+        "<figure>\n",
         "<img\n",
         "src=\"https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2017/10/06/intro-gluon-1.gif\"\n",
         "alt=\"출처: https://aws.amazon.com/ko/what-is/deep-learning/\" />\n",
@@ -862,7 +864,7 @@
         "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
         "</figure>"
       ],
-      "id": "18d2a325-f332-4a15-9c11-0223f15ab60a"
+      "id": "4e95efc3-48fd-4675-9895-8969e28e9151"
     },
     {
       "cell_type": "code",
@@ -895,7 +897,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "35b3c4a0-db4a-4e3d-bfcc-b253f8ce7acd"
+      "id": "42101b56-66a3-44b1-8fe0-2614ed9ebf88"
     }
   ],
   "nbformat": 4,
