--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "0476d864-df47-416d-b940-2cfacac81339"
+      "id": "a6673029-8667-420b-b663-3e1816f73cd6"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "04f71730-080b-49ba-ba9e-2c32919a0685"
+      "id": "59f588f1-9c5c-4ddb-a4c2-40135e70b66d"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "0cc81b93-e6e6-4e7b-ba14-34ea3e0b4ae7"
+      "id": "0e510c65-05c4-4aab-bb20-2b5e53266a3c"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "aa4df4f0-3929-4c26-bb30-a7576850eae9"
+      "id": "7fc69952-264e-40dd-81ea-50988dc3c72f"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "c78ed222-a535-4e2e-8bb1-c84d8868979e"
+      "id": "19036c2b-e681-43da-9b1a-dae3d3ebb6e2"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "e7f0658e-f094-4c32-92e4-18d8f7dd81a3"
+      "id": "428ab532-f16a-4058-b81c-e19adc5cfa51"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "c788e224-3ec5-4152-abcd-9b404a5d51a5"
+      "id": "40c48290-8140-4f47-acbf-91d8711189c4"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "737328f5-9d7e-4edc-8e8c-07957c965def"
+      "id": "26a723c2-f2cb-401a-947f-5713ac6498d5"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "153ba45e-4727-4910-8b97-72bde203a79e"
+      "id": "6337430e-587f-4a36-af88-93b240a68111"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "0937cd9e-e164-4698-b9cc-d31db2103ab1"
+      "id": "3f5e3d25-0ebf-4d0c-bc9b-acda48754579"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "f89551a5-7edb-46e8-96a3-8e9642ff2902"
+      "id": "c8886dbe-1600-421f-8ffd-9fbe73bfcc6c"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "055e1d93-6e3c-4c97-a818-7b1cd79ec4fc"
+      "id": "f8bb16d2-0ff2-4a6d-ae90-c090772aff8a"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "adfff7b2-cfda-441a-ab67-42c6df889f42"
+      "id": "75b627ac-0cd0-4d50-a28a-8ee9e92c3bc7"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "7ac762e4-65d3-4594-a4a7-38af99eb39e4"
+      "id": "1c00077f-427e-4615-bbea-9986a71c45ae"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "a6a307c3-66fd-4c59-8b1d-2573af14acbf"
+      "id": "c725b7d6-53b5-4ba3-8253-5cbc4841e353"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "4f28aed1-dd66-405e-801c-4b4f192e195d"
+      "id": "2b176f9d-7ea8-4a0e-8785-7d4d972d1148"
     },
     {
       "cell_type": "code",
