--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "db01a744-060e-481d-bdb9-14f0d6401917"
+      "id": "f0d395ad-b664-42d3-8a2e-64f2ab762c25"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "61e20d82-b22c-4006-bb77-4f812333677b"
+      "id": "692fc358-0987-4acb-b831-c5e532f707c7"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "723cbbee-d435-4b32-a404-649b09a150b5"
+      "id": "368bfda7-431c-437d-aaef-ba3c4a2f85cf"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "c5004082-25a8-4633-a84f-1b5e4e35f65f"
+      "id": "223b1981-3938-4e06-8710-5192c85d957c"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "d75b94fe-66de-4ca9-a3c8-3a8ed622310e"
+      "id": "21d87b6d-dc13-4718-aadb-6843d74fd3fa"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "434654e8-87a6-41ac-b83a-9892f49487c1"
+      "id": "811fe617-db76-49c1-ae60-1c56134d7e8f"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "60978157-7a55-4312-abce-f135ffa765c1"
+      "id": "be643f5d-5548-4535-b44d-3d5c67c752e2"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "61c3c157-9016-44c9-9b0b-44f4110b17ee"
+      "id": "df8b952b-1d98-457c-984a-e901b1ad04b1"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "cbc316c4-faa1-473f-86f1-3c3bd4d2fd9b"
+      "id": "652538df-339e-4fe8-b89d-3c9701889422"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "6847e546-3c17-416f-8cd9-a6f5d1660fe3"
+      "id": "f139b088-6ec9-414e-ab6e-ac90ebd77759"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "c70e003c-cb3b-4ef5-9762-7e1cddb65bf6"
+      "id": "e75d5894-d8d5-4dc8-92d7-a2f78796dbc6"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "6a49fa59-368a-4573-8dfa-64933c3c49c6"
+      "id": "17f326f4-9383-4d8e-95a0-ed6bee106d2f"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "c4cb0c9c-796e-42ca-817d-3d3103ad28f1"
+      "id": "1cb3c276-0284-4a2e-8015-e6593052163e"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "e494f9f1-e013-446d-af06-4fb9658404f8"
+      "id": "d74a4aeb-283d-43e4-85c6-e3ff40726ecb"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "4e54d20f-636d-41f8-8384-5cc8b4540bcb"
+      "id": "93c1df59-c9ea-4acc-b08b-1b0fd9a671d1"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "a2b75be0-3d7f-4cea-9304-be67e6aa3103"
+      "id": "f62c3c99-4b57-4a44-a5fd-dbfa70f10a21"
     },
     {
       "cell_type": "code",
