--- a/docs/posts/05wk-1.out.ipynb
+++ b/docs/posts/05wk-1.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "143f580c-95b8-47b1-b35c-a8b973c4a3d4"
+      "id": "bb3c3c3c-effb-4f85-996a-134bb15345dc"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "ce1ab8c3-901b-41f0-b179-7d6b99489d54"
+      "id": "925ea15b-7fd8-4b00-aafd-267dd2fb1083"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "\n",
         "`-` cpu 연산이 가능한 메모리에 데이터 저장"
       ],
-      "id": "34d7e523-304d-4fe4-bd63-c469da2efcda"
+      "id": "4776a62e-65c6-4c06-b567-5cc816384c38"
     },
     {
       "cell_type": "code",
@@ -86,7 +86,7 @@
       "source": [
         "`-` gpu 연산이 가능한 메모리에 데이터 저장"
       ],
-      "id": "ef4187a3-586c-42a9-b213-2fc9f44e4f9e"
+      "id": "1d4addec-b951-4db5-8f51-74b738c4f945"
     },
     {
       "cell_type": "code",
@@ -192,7 +192,7 @@
         "\n",
         "`-` cpu 혹은 gpu 연산이 가능한 메모리에 저장된 값들을 확인"
       ],
-      "id": "1e0bb2e3-1112-44de-a3ed-f6aba3a2a8dd"
+      "id": "3d07c2f5-0e9f-464b-9a3f-f0a0917ce9c8"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "8615bf7e-3334-43a5-8798-c3f3d26c10b0"
+      "id": "40288478-3952-4bf3-aaa3-aa45a67ca411"
     },
     {
       "cell_type": "code",
@@ -246,7 +246,7 @@
       "source": [
         "(예시2)"
       ],
-      "id": "51019f8a-4313-4b9f-92e0-8f43fc87fd2f"
+      "id": "b0a3fd2c-a40a-4bd1-96c4-232711767372"
     },
     {
       "cell_type": "code",
@@ -266,7 +266,7 @@
       "source": [
         "(예시3)"
       ],
-      "id": "c89a0389-0f28-480f-ab3e-b540c75175fb"
+      "id": "280bbe4e-9a19-4dd5-8df6-512e930545bb"
     },
     {
       "cell_type": "code",
@@ -305,7 +305,7 @@
         "\n",
         "(예시4)"
       ],
-      "id": "1f711028-42d7-4fdc-859c-08d2807ec291"
+      "id": "4f248679-afa1-4d63-89c4-2dea661198d9"
     },
     {
       "cell_type": "code",
@@ -325,7 +325,7 @@
       "source": [
         "(예시5)"
       ],
-      "id": "f47ce48a-1bab-4f41-b3d1-29bb47ec864a"
+      "id": "3b393ce8-3e04-468f-942e-8677cd6af65a"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
       "source": [
         "(예시6)"
       ],
-      "id": "a54bf90c-5b76-44ab-95c8-cf878cc94375"
+      "id": "ca02a88f-8b87-41ae-a884-3d0d12bfe9b5"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
       "source": [
         "(예시7)"
       ],
-      "id": "e76d9242-477d-43b6-9fa7-59de6cfeb90f"
+      "id": "63cdaee0-16c6-4453-9702-3656169b46df"
     },
     {
       "cell_type": "code",
@@ -385,7 +385,7 @@
       "source": [
         "(예시8)"
       ],
-      "id": "30f24713-a6c7-495f-b2db-74a54c7dec53"
+      "id": "ec908019-f90f-4d34-abf7-d65be049e740"
     },
     {
       "cell_type": "code",
@@ -405,7 +405,7 @@
       "source": [
         "## B. 시간측정 (예비학습)"
       ],
-      "id": "b0f47433-c170-401f-988d-424f5170b637"
+      "id": "e917cfe9-3e03-48ef-9fb4-a039a753f6bf"
     },
     {
       "cell_type": "code",
@@ -463,7 +463,7 @@
         "\n",
         "`-` CPU (512 nodes)"
       ],
-      "id": "30392a29-63cc-4b85-bf8c-db5fba33f417"
+      "id": "7d6738ce-690a-4422-9cdb-4b5f912149ca"
     },
     {
       "cell_type": "code",
@@ -507,7 +507,7 @@
       "source": [
         "`-` GPU (512 nodes)"
       ],
-      "id": "dc7caa0e-a9cf-47af-a063-11c987fe6a9e"
+      "id": "7186aaf4-69e6-4f44-be43-1bccce1a335c"
     },
     {
       "cell_type": "code",
@@ -555,7 +555,7 @@
         "\n",
         "`-` CPU (20,480)"
       ],
-      "id": "e11b8b5f-7635-4e44-980e-524ff98ea54e"
+      "id": "55f72134-6f53-4dc6-88c6-756c52202161"
     },
     {
       "cell_type": "code",
@@ -599,7 +599,7 @@
       "source": [
         "`-` GPU (20,480)"
       ],
-      "id": "f77f262d-d3c6-4540-a80f-1060644faf55"
+      "id": "f9563a5d-0695-4429-80e5-b566652188af"
     },
     {
       "cell_type": "code",
@@ -649,7 +649,7 @@
         "\n",
         "`-` CPU (204,800)"
       ],
-      "id": "de9b3101-ad20-4f39-aa23-b93a439276ae"
+      "id": "7b983ddf-6e7d-49c1-b583-bb40abcc224a"
     },
     {
       "cell_type": "code",
@@ -693,7 +693,7 @@
       "source": [
         "`-` GPU (204,800)"
       ],
-      "id": "e77929f0-5b5d-41f5-908b-d9362fafd6fb"
+      "id": "66007103-c2e0-449a-b8f2-3d3d497faaec"
     },
     {
       "cell_type": "code",
@@ -749,7 +749,7 @@
         "\n",
         "`-` 우리가 분석하는 데이터: 빅데이터..?"
       ],
-      "id": "a53c8567-1bd0-4399-b21e-6d39f7f80e04"
+      "id": "6bc25f4e-bead-4801-9d9e-399d233d3b85"
     },
     {
       "cell_type": "code",
@@ -795,7 +795,7 @@
         "\n",
         "`-` 데이터를 100개중에 1개만 꼴로만 쓰면 어떨까?"
       ],
-      "id": "6dcece5d-b9a5-4ec5-b463-c63cb946c229"
+      "id": "1031c08b-bea0-48ba-a0b5-39f1476c7f50"
     },
     {
       "cell_type": "code",
@@ -924,7 +924,7 @@
         "\n",
         "`-` ds: 섭스크립터블함"
       ],
-      "id": "7457aebf-fde1-4a9b-a8b3-2e54bba1e21a"
+      "id": "9cc04474-0fb0-4b67-8efc-b30a2885990a"
     },
     {
       "cell_type": "code",
@@ -995,7 +995,7 @@
         "\n",
         "`-` dl: 섭스크립터블하지 않지만 이터러블함"
       ],
-      "id": "f2eab7e9-1280-4b76-9473-85d4afe55fd9"
+      "id": "8b6c444c-e401-45ff-8e6e-0e15f3b9e21d"
     },
     {
       "cell_type": "code",
@@ -1041,7 +1041,7 @@
         "`-` 마지막관측치는 뭔데 단독으로 업데이트하냐?? –\\> shuffle True 같이\n",
         "자잘한 옵션도 있음.."
       ],
-      "id": "5fb6b64d-d90b-4a02-88a9-450e186f8199"
+      "id": "c0f960a5-42c6-4c1c-b749-e52e1ec02343"
     },
     {
       "cell_type": "code",
@@ -1081,7 +1081,7 @@
         "\n",
         "`-` 그냥 경사하강법 – 미니배치 안쓰는 학습, 우리가 맨날하는 그거"
       ],
-      "id": "f4dcc328-42fb-4f4c-906f-bb2f545b436b"
+      "id": "81bcfdb2-8e0c-43c1-9c93-1eac30007bd3"
     },
     {
       "cell_type": "code",
@@ -1129,7 +1129,7 @@
       "source": [
         "`-` “확률적”경사하강법 – 미니배치 쓰는 학습"
       ],
-      "id": "e57ce1a8-9509-42b5-8730-33c4ab1106c5"
+      "id": "7cc01371-3691-4f5f-8cc9-56a4899ef352"
     },
     {
       "cell_type": "code",
@@ -1180,7 +1180,7 @@
       "source": [
         "`-` GPU를 활용하는 “확률적”경사하강법 – 실제적으로는 이게 최종알고리즘"
       ],
-      "id": "830efac8-d9e1-4945-82fe-0cb53df83f74"
+      "id": "8babf694-f879-4610-a44f-0350172f2438"
     },
     {
       "cell_type": "code",
@@ -1256,7 +1256,7 @@
         "\n",
         "`-` 정리된 코드1: 통계잘하는데 파이토치 못쓰는 사람의 코드"
       ],
-      "id": "f69f4765-65cf-46ef-aac5-cc8dee584926"
+      "id": "d8049114-eb5b-4479-87a7-24fa2f27860b"
     },
     {
       "cell_type": "code",
@@ -1306,7 +1306,7 @@
       "source": [
         "`-` 정리된 코드2: 파이토치를 잘하는 사람의 코드"
       ],
-      "id": "639a3a20-5333-4c4b-b922-b7b1bedebff0"
+      "id": "2ec4f7a3-0394-4291-8b01-8be54f3d09fd"
     },
     {
       "cell_type": "code",
@@ -1362,7 +1362,7 @@
         "observation 마다 k개의 숫자가 있는데, 그중에서 유난히 큰 하나의 숫자가\n",
         "있음."
       ],
-      "id": "108c0e04-9284-4167-9252-1e73ef3ab8db"
+      "id": "cbdba4b8-8996-4fc0-a20a-9565902978f6"
     },
     {
       "cell_type": "code",
@@ -1401,7 +1401,7 @@
         "\n",
         "(예시1) – 잘못계산"
       ],
-      "id": "f6ef91c6-9492-4204-98e2-dabf7a01f603"
+      "id": "b17546b3-7d7e-4d21-88ad-314769d92a5e"
     },
     {
       "cell_type": "code",
@@ -1450,7 +1450,7 @@
       "source": [
         "(예시2) – 이게 맞게 계산되는 것임"
       ],
-      "id": "4e3b6dc5-c39b-4683-b34e-eaeb69e51e0b"
+      "id": "7ad8946b-6818-4660-ae99-03b2930452e9"
     },
     {
       "cell_type": "code",
@@ -1494,7 +1494,7 @@
       "source": [
         "(예시3) – 차원을 명시안하면 맞게 계산해주고 경고 줌"
       ],
-      "id": "f1c2915c-88cb-4eac-8179-3665438175f4"
+      "id": "57245327-d617-4b47-af81-2b1a29f0e2bd"
     },
     {
       "cell_type": "code",
@@ -1547,7 +1547,7 @@
       "source": [
         "(예시4) – 진짜 손계산"
       ],
-      "id": "944a1455-b10f-474a-868a-2036274994ca"
+      "id": "ceaea7d5-4bb0-4c91-a65f-11e430ebadda"
     },
     {
       "cell_type": "code",
@@ -1609,7 +1609,7 @@
         "\n",
         "`-` 예제1: BCELoss vs BCEWithLogisticLoss"
       ],
-      "id": "577a6950-9b9c-4e05-b663-643a96373b8a"
+      "id": "027cb5fa-4272-437a-8b9b-8595a2bd407a"
     },
     {
       "cell_type": "code",
@@ -1676,7 +1676,7 @@
       "source": [
         "`-` 예제2: BCEWithLogisticLoss vs CrossEntropyLoss"
       ],
-      "id": "93215815-f455-4451-9664-61180c62230d"
+      "id": "86db6491-83aa-4683-96a1-f87e0ccd6881"
     },
     {
       "cell_type": "code",
@@ -1765,7 +1765,7 @@
         "\n",
         "***`# 3개의 카테고리`***"
       ],
-      "id": "228af122-8e6e-4b60-bd04-81372120b999"
+      "id": "63ced59c-db62-4b45-b99e-33348db989dd"
     },
     {
       "cell_type": "code",
@@ -1847,7 +1847,7 @@
         "\n",
         "`-` 2개의 클래스일경우에도 CrossEntropy를 쓸 수 있지 않을까?"
       ],
-      "id": "e0ee5ba8-308f-4ba9-8d39-cad0e8d1bee3"
+      "id": "61f8116a-4a8c-4035-ad99-d37c82eb20cc"
     },
     {
       "cell_type": "code",
@@ -1944,7 +1944,7 @@
         "\n",
         "아래와 같은 자료가 있다."
       ],
-      "id": "2fc871be-899d-48d7-a67c-30369916d2bb"
+      "id": "f9f07c92-3dda-4742-bef1-7158a7658efe"
     },
     {
       "cell_type": "code",
@@ -1991,7 +1991,7 @@
         "\n",
         "**hint** 원핫인코딩을 위해 아래의 함수를 사용하라."
       ],
-      "id": "6068c2fd-8936-4dac-84ba-9670a5a2a77d"
+      "id": "dd8a4af6-12cd-4772-9465-5bdbab9cce77"
     },
     {
       "cell_type": "code",
@@ -2013,7 +2013,7 @@
         "\n",
         "-   네트워크는 1개의 은닉층을 가지도록 하고, 은닉노드수는 32개로\n",
         "    설정하라. 은닉층의 활성화함수는 ReLU로 설정하라.\n",
-        "-   y를 lenght-$n$인 벡터로 유지하라.\n",
+        "-   y를 (one-hot 인코딩 하지 않고) lenght-$n$인 벡터로 유지하라.\n",
         "-   손실함수를 `torch.nn.CrossEntropyLoss()`로 설정하라.\n",
         "-   epoch = 325로 설정하라.\n",
         "\n",
@@ -2022,7 +2022,7 @@
         "-   네트워크는 1개의 은닉층을 가지도록 하고, 은닉노드수는 32개로\n",
         "    설정하라. 은닉층의 활성화함수는 ReLU로 설정하라.\n",
         "-   batch_size = 1024 로 설정한뒤 mini_batch를 이용한 학습을 하라.\n",
-        "-   y를 lenght-$n$인 벡터로 유지하라.\n",
+        "-   y를 (one-hot 인코딩 하지 않고) lenght-$n$인 벡터로 유지하라.  \n",
         "-   손실함수를 `torch.nn.CrossEntropyLoss()`로 설정하라.\n",
         "-   총 iteration 수가 325가 되도록 적절하게 epoch 을 설정하라.\n",
         "\n",
@@ -2031,12 +2031,12 @@
         "-   네트워크는 1개의 은닉층을 가지도록 하고, 은닉노드수는 32개로\n",
         "    설정하라. 은닉층의 활성화함수는 ReLU로 설정하라.\n",
         "-   batch_size = 512 로 설정한뒤 mini_batch를 이용한 학습을 하라.\n",
-        "-   y를 lenght-$n$인 벡터로 유지하라.\n",
+        "-   y를 (one-hot 인코딩 하지 않고) lenght-$n$인 벡터로 유지하라.\n",
         "-   손실함수를 `torch.nn.CrossEntropyLoss()`로 설정하라.\n",
         "-   총 iteration 수가 325가 되도록 적절하게 epoch 을 설정하라.\n",
         "-   GPU를 활용하여 학습하라."
       ],
-      "id": "c8151b28-65f1-4925-9c3f-749277eed67f"
+      "id": "581afe87-2844-49d3-87ef-6dcfec865f63"
     }
   ],
   "nbformat": 4,
